# tp-rasterizer

./: LICENSE  README.md
src/: CMakeLists.txt  Color.h  FrameBuffer.h  Image_png.cpp  Image_png.h  Light.h  Material.cpp  Material.h  Projection.cpp  Terrain.cpp  Terrain.h  VertexBuffer.cpp  VertexBuffer.h  evector.cpp  evector.h  mathematics.cpp  mathematics.h  matrix.cpp  matrix.h  matrix4.cpp
